# impulse-test-task

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sample_input2.txt  sample_input3.txt
inc/: computerclub.hpp  event.hpp  eventbase.hpp  eventin.hpp  eventout.hpp  filebuffer.hpp  inputbuffer.hpp  myexceptions.hpp  mytime.hpp  statement.hpp
src/: computerclub.cpp  event.cpp  eventin.cpp  eventout.cpp  filebuffer.cpp  inputbuffer.cpp  myexceptions.cpp  mytime.cpp
test/: test_buffer.cpp  test_computerclub.cpp  test_event.cpp  test_events.cpp  test_time.cpp
